--- a/.tmux.conf
+++ b/.tmux.conf
@@ -11,9 +11,9 @@ set -g mouse on
 
 bind o split-window -hc "#{pane_current_path}"
 bind e split-window -vc "#{pane_current_path}"
-bind -r C-j resize-pane -D 15
-bind -r C-k resize-pane -U 15
-bind -r C-h resize-pane -L 15
-bind -r C-l resize-pane -R 15
+bind C-Down resize-pane -D 15
+bind C-Up resize-pane -U 15
+bind C-Left resize-pane -L 15
+bind C-Right resize-pane -R 15
 
 run '~/.tmux/plugins/tpm/tpm'
